e2e/testdata/kubernetes/test-pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: test-pod-admission-controller
  annotations:
    pod-admission-controller/ignoreRunAsNonRoot: "test-2,test-3"
    pod-admission-controller/ignoreAddDefaultResources: "test-1,test-3"
    pod-admission-controller/ignoreEnv: "test-4"
  name: test-pod-1
spec:
  terminationGracePeriodSeconds: 0
  securityContext:
    runAsUser: 1001
  initContainers:
  # init containers must be unchanged
  - name: test-init-0
    image: test.test.com/alpine:latest
    securityContext:
      runAsUser: 1002
    command:
    - echo
    - ok
  - name: test-init-1
    image: test-fake.test.com/alpine:latest
    env:
    - name: TEST
      value: ok
    resources:
      requests:
        cpu: 100m
    command:
    - echo
    - ok
  containers:
  # test0
  # container must have
  # 1. new env
  # 2. new memory limit
  # 3. securitycontext
  - name: test-0
    image: test.test.com/alpine:latest
    command:
    - sleep
    - 1d
    env:
    - name: TEST0
      value: test0
    resources:
      requests:
        cpu: 10m
        memory: 10Mi
  # test1
  # container must have
  # 1. new env
  # 2. do not change memory limit (pod-admission-controller/ignoreAddDefaultResources)
  # 3. securitycontext
  - name: test-1
    image: test.test.com/alpine:latest
    command:
    - sleep
    - 1d
    securityContext:
      runAsUser: 1004
    resources:
      requests:
        cpu: 10m
        memory: 10Mi
  # test2
  # container must have
  # 1. new env
  # 2. new resources
  # 3. securitycontext without change (pod-admission-controller/ignoreRunAsNonRoot)
  - name: test-2
    image: test.test.com/alpine:latest
    command:
    - sleep
    - 1d
  # test3
  # container must have
  # 1. new env
  # 2. do not change memory limit (pod-admission-controller/ignoreAddDefaultResources)
  # 3. securitycontext without change (pod-admission-controller/ignoreRunAsNonRoot)
  - name: test-3
    image: test.test.com/alpine:latest
    command:
    - sleep
    - 1d
  # test4
  # container must have
  # 1. no new env (pod-admission-controller/ignoreEnv)
  # 2. new resources
  # 3. securitycontext, replace runAsUser=0 to runAsUser=82
  - name: test-4
    image: test.test.com/alpine:latest
    command:
    - sleep
    - 1d
    env:
    - name: TEST4
      value: test4
    securityContext:
      runAsUser: 0
